Summary：启动模式和启动流程分析

--- a/app/src/main/res/layout/activity_common.xml
+++ b/app/src/main/res/layout/activity_common.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:gravity="center"
-        android:text="EActivity singleTask+taskAffinity" />
+        android:text="ETaskAffinityActivity singleTask+taskAffinity" />
 
     <TextView
         android:id="@+id/singleTask_taskAffinity2"
