--- a/app/src/main/res/layout/activity_startup_two.xml
+++ b/app/src/main/res/layout/activity_startup_two.xml
@@ -9,5 +9,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="第二个" />
+        android:text="启动流程分析第二个页面" />
 </LinearLayout>
