--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,16 @@
         android:textSize="12sp" />
 
     <TextView
+        android:id="@+id/btn_life_save"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:background="#f4f4f4"
+        android:gravity="center"
+        android:text="保存状态"
+        android:textSize="12sp" />
+
+    <TextView
         android:id="@+id/btn_life_s"
         android:layout_width="match_parent"
         android:layout_height="40dp"
