--- a/app/src/main/res/layout/activity_b.xml
+++ b/app/src/main/res/layout/activity_b.xml
@@ -10,10 +10,9 @@
         android:id="@+id/tv_life_b"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="5dp"
         android:gravity="center"
-        android:text="B"
+        android:text="BActivity"
         android:textColor="#353535"
-        android:textSize="22sp" />
+        android:textSize="14sp" />
 
 </LinearLayout>
