--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/btn_life_a"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="#f4f4f4"
+        android:background="#14c4b4"
         android:gravity="center"
         android:text="生命周期_activity"
         android:textSize="12sp" />
@@ -19,19 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="6dp"
-        android:background="#f4f4f4"
+        android:background="#14c4c4"
         android:gravity="center"
         android:text="启动模式"
-        android:textSize="12sp" />
-    
-    <TextView
-        android:id="@+id/btn_life_save"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:background="#f4f4f4"
-        android:gravity="center"
-        android:text="保存状态"
         android:textSize="12sp" />
 
     <TextView
@@ -39,9 +29,19 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        android:background="#f4f4f4"
+        android:background="#14c4c4"
         android:gravity="center"
         android:text="生命周期_service"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/btn_life_save"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:background="#14c4e4"
+        android:gravity="center"
+        android:text="保存状态"
         android:textSize="12sp" />
 
     <TextView
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="5dp"
-        android:background="#f4f4f4"
+        android:background="#14c4f4"
         android:gravity="center"
         android:text="Activity启动流程分析"
         android:textSize="12sp" />
