--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,4 +54,24 @@
         android:text="Activity启动流程分析"
         android:textSize="12sp" />
 
+    <TextView
+        android:id="@+id/btn_receiver_send"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:background="#14c4a4"
+        android:gravity="center"
+        android:text="发送广播"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/btn_content_provider"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:background="#14c494"
+        android:gravity="center"
+        android:text="ContentProvider"
+        android:textSize="12sp" />
+
 </LinearLayout>
